# Lab3

./: .gitignore  CMakeLists.txt  README.md  build.sh  gen1.cpp  gen2.cpp  gen3.cpp  lab3g1_test.sh  lab3g2_test.sh  lab3g3_test.sh  result1.csv  result2.csv  result2.ods  result3.csv  result3.ods
report/: report.tex
